			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Avoid "Loading module ... abolished: ..." messages when
    reloading discontiguous predicates.

  * FIXED: A == B if A and B are equal string objects.
    (typo when providing support for cyclic terms)  Jacques Abel.


VERSION 5.3.16 (July 21, 2004)
==============================

  * MODIFIED: print/1 behaves as write/1 instead of writeq/1.  This
    new behaviour is compatible to other Prolog systems and the
    documentation.  Lourens van der Meij.  Use write_term/[2,3]
    to get unambiguous ISO compliant printing in a specific mode.

    Affected code must be updated.  

  * MODIFIED: By default, symbols from shared objects are not made
    global any longer.  The argument order of open_shared_object/3
    has changes, though the predicate automatically reverses the
    arguments when confronted with the old order.

    This is unlikely to affect user code.  If it does, the user can
    use open_shared_object(File, Handle, [global]) for compatibility.


VERSION 5.3.15 (July 16, 2004)
==============================

  * FIXED: MS-Windows: same_file/2 for relative paths.

  * ADDED: support for open(pipe(Command), ...) for the Windows version
    after recent discussion on the mailinglist.  Works both in plwin.exe
    and plcon.exe thanks to code used from the LUA programming language
    and distributed under the compatible MIT license.

  * FIXED: import/export issues loading QLF files leading to
    ERROR: Failed to import ... into ... messages.

  * ADDED/MODIFIED: print message if a detached thread dies abnormally.
    After report by Fabien Todescato.

  * FIXED: portability issue in Makefile (Solaris).  Bill McEnaney.
